# web-rag-fusion-mcp-server

./: .dockerignore  .env.example  .gitignore  BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  Dockerfile  LICENSE  README-zh.md  README.md  README_zh.md  RELEASE_NOTES.md  TECH-zh.md  TECH.md  create_github_release.md  demo_search_optimizer.py  docker-compose.yml  example_embedding_usage.py  install.sh  pyproject.toml  requirements.txt  test_callresult.py  test_embedding_providers.py  test_mcp_client.py  test_smart_search.py
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml  release.yml  test.yml
config/: __init__.py  settings.py  tool_loader.py  tools.yaml
docs/: API.md  ARCHITECTURE.md  CONFIG.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  QUICKSTART.md  README-EN.md  README.md  SMART_SEARCH_IMPLEMENTATION.md  TECH-zh.md  TECH.md  USER_GUIDE.md  embedding_providers.md  tech-zh.md  tech.md
docs/configuration/: CONFIG.md  environment.md
docs/installation/: QUICKSTART.md  docker-setup.md  local-setup.md
docs/troubleshooting/: common-issues.md
docs/usage/: mcp-integration.md  tools-reference.md
scripts/: init_knowledge_base.py  test_server.py
src/: __init__.py  document_processor.py  embedding_provider.py  llamaindex_processor.py  mcp_server.py  search_optimizer.py  vector_store.py  web_search.py
tests/: test_final.py
tests/integration/: test_mcp_integration.py  test_search_optimizer_integration.py
tests/unit/: test_search_optimizer.py
