[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for RAG (Retrieval-Augmented Generation)"
authors = [{name = "RAG MCP Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "chromadb>=0.4.15",
    "tavily-python>=0.3.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "openai>=1.3.0",
    "pypdf>=3.17.0",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "chardet>=5.2.0",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.19.0",
    "jsonschema>=4.19.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rag-mcp-server = "src.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]